--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <link href="cosmo.css" rel="stylesheet">
     <head>
-        <title>SkidRuin</title>
+        <title>Stabbing.lol</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="$HALL$" property="og:title"/>
@@ -12,7 +12,6 @@
         <link rel="stylesheet" href="assets/skidruin.css"/>
         <link rel="icon" href="assets/media/favicon.gif" type="image/gif" sizes="16x16">
         <div class="container" style="display: block;">
-        <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@0.3.7/disable-devtool.min.js'></script>
             <div class="row" style="display: block;">
                 <div class="col-md-12" style="display: block;">
                     <img class="img-responsive hanginggirl animated infinite swing nodrag" draggable="false" src="girl.png" style="display: block;">
