--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
 <a href="r.html" style="color: red;">rifle</a> | <a href="t.html" style="color: red;">tayek</a>  
 
-https://t.me/droppedyoursecurity - pedo dump
+https://doxbin.com/user/christian - web dev
 <span id="typElement"></span>
 </pre>
     </div>
