--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>https://ihaveur.info</p>
         <p style="font-size:10px;">--Socials--</p>
         <a href="https://doxbin.com/user/christian" target="_blank" rel="noopener noreferrer"><img src="socials/dbin.png" alt="Doxbin" height="30px"></a>
-        <a href="https://t.me/bandwidthz" target="_blank" rel="noopener noreferrer"><img src="socials/telegram.png" height="30px" alt="Telegram" height="30px"></a>
+        <a href="https://t.me/cre_epier" target="_blank" rel="noopener noreferrer"><img src="socials/telegram.png" height="30px" alt="Telegram" height="30px"></a>
       </div>
       <div class="box-brrr">
         <img src="people/tayek.png" class="pfp" alt="Pierce PFP"/>
@@ -42,7 +42,7 @@
         <p>#1 case beater</p>
         <p style="font-size:10px;">--Socials--</p>
         <a href="https://doxbin.com/user/dreidelman" target="_blank" rel="noopener noreferrer"><img src="socials/dbin.png" alt="Doxbin" height="30px"></a>
-        <a href="https://t.me/bandwidthz" target="_blank" rel="noopener noreferrer"><img src="socials/telegram.png" height="30px" alt="Telegram" height="30px"></a>
+        <a href="https://t.me/cokerocks" target="_blank" rel="noopener noreferrer"><img src="socials/telegram.png" height="30px" alt="Telegram" height="30px"></a>
       </div>
     </div>
 
